[gd_scene load_steps=92 format=2]

[ext_resource path="res://sprites/ninja/Idle__004.png" type="Texture" id=1]
[ext_resource path="res://sprites/ninja/Idle__001.png" type="Texture" id=2]
[ext_resource path="res://sprites/ninja/Idle__002.png" type="Texture" id=3]
[ext_resource path="res://sprites/ninja/Idle__007.png" type="Texture" id=4]
[ext_resource path="res://sprites/ninja/Idle__006.png" type="Texture" id=5]
[ext_resource path="res://sprites/ninja/Idle__000.png" type="Texture" id=6]
[ext_resource path="res://sprites/ninja/Idle__003.png" type="Texture" id=7]
[ext_resource path="res://sprites/ninja/Idle__005.png" type="Texture" id=8]
[ext_resource path="res://sprites/ninja/Idle__008.png" type="Texture" id=9]
[ext_resource path="res://sprites/ninja/Idle__009.png" type="Texture" id=10]
[ext_resource path="res://sprites/ninja/Dead__006.png" type="Texture" id=11]
[ext_resource path="res://sprites/ninja/Jump_Attack__007.png" type="Texture" id=12]
[ext_resource path="res://sprites/ninja/Jump_Attack__008.png" type="Texture" id=13]
[ext_resource path="res://sprites/ninja/Dead__000.png" type="Texture" id=14]
[ext_resource path="res://sprites/ninja/Dead__001.png" type="Texture" id=15]
[ext_resource path="res://sprites/ninja/Jump_Attack__009.png" type="Texture" id=16]
[ext_resource path="res://sprites/ninja/Dead__002.png" type="Texture" id=17]
[ext_resource path="res://sprites/ninja/Dead__003.png" type="Texture" id=18]
[ext_resource path="res://sprites/ninja/Dead__004.png" type="Texture" id=19]
[ext_resource path="res://sprites/ninja/Dead__008.png" type="Texture" id=20]
[ext_resource path="res://sprites/ninja/Dead__007.png" type="Texture" id=21]
[ext_resource path="res://sprites/ninja/Dead__009.png" type="Texture" id=22]
[ext_resource path="res://sprites/ninja/Dead__005.png" type="Texture" id=23]
[ext_resource path="res://sprites/ninja/Jump_Attack__002.png" type="Texture" id=24]
[ext_resource path="res://sprites/ninja/Jump_Attack__004.png" type="Texture" id=25]
[ext_resource path="res://sprites/ninja/Jump_Attack__005.png" type="Texture" id=26]
[ext_resource path="res://sprites/ninja/Jump_Attack__006.png" type="Texture" id=27]
[ext_resource path="res://sprites/ninja/Jump_Attack__003.png" type="Texture" id=28]
[ext_resource path="res://sprites/ninja/Jump_Attack__000.png" type="Texture" id=29]
[ext_resource path="res://sprites/ninja/Jump_Attack__001.png" type="Texture" id=30]
[ext_resource path="res://scenes/Ninja/Ninja.gd" type="Script" id=31]
[ext_resource path="res://sprites/animations/2.png" type="Texture" id=32]
[ext_resource path="res://sprites/animations/0.png" type="Texture" id=33]
[ext_resource path="res://sprites/animations/1.png" type="Texture" id=34]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0, 1, 0, 0.784314 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0, 0.313726, 0, 0.784314 )
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 2 ), ExtResource( 3 ), ExtResource( 7 ), ExtResource( 1 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 9 ), ExtResource( 10 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 29 ), ExtResource( 30 ), ExtResource( 24 ), ExtResource( 28 ), ExtResource( 25 ), ExtResource( 26 ), ExtResource( 27 ), ExtResource( 12 ), ExtResource( 13 ), ExtResource( 16 ) ],
"loop": false,
"name": "default",
"speed": 36.0
} ]

[sub_resource type="SpriteFrames" id=130]
animations = [ {
"frames": [ ExtResource( 14 ), ExtResource( 15 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 19 ), ExtResource( 23 ), ExtResource( 11 ), ExtResource( 21 ), ExtResource( 20 ), ExtResource( 22 ) ],
"loop": false,
"name": "default",
"speed": 12.0
} ]

[sub_resource type="RectangleShape2D" id=131]
extents = Vector2( 128, 240 )

[sub_resource type="AtlasTexture" id=79]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=80]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=81]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=82]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=83]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=84]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=85]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=86]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=87]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=88]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=89]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 1024, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=90]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 1536, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=91]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 0, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=92]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 512, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=93]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 1024, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=94]
flags = 4
atlas = ExtResource( 33 )
region = Rect2( 1536, 1536, 512, 512 )

[sub_resource type="SpriteFrames" id=95]
animations = [ {
"frames": [ SubResource( 79 ), SubResource( 80 ), SubResource( 81 ), SubResource( 82 ), SubResource( 83 ), SubResource( 84 ), SubResource( 85 ), SubResource( 86 ), SubResource( 87 ), SubResource( 88 ), SubResource( 89 ), SubResource( 90 ), SubResource( 91 ), SubResource( 92 ), SubResource( 93 ), SubResource( 94 ) ],
"loop": false,
"name": "default",
"speed": 32.0
} ]

[sub_resource type="AtlasTexture" id=96]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=97]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=98]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=99]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=100]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=101]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=102]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=103]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=104]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=105]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=106]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 1024, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=107]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 1536, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=108]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 0, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=109]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 512, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=110]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 1024, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=111]
flags = 4
atlas = ExtResource( 34 )
region = Rect2( 1536, 1536, 512, 512 )

[sub_resource type="SpriteFrames" id=112]
animations = [ {
"frames": [ SubResource( 96 ), SubResource( 97 ), SubResource( 98 ), SubResource( 99 ), SubResource( 100 ), SubResource( 101 ), SubResource( 102 ), SubResource( 103 ), SubResource( 104 ), SubResource( 105 ), SubResource( 106 ), SubResource( 107 ), SubResource( 108 ), SubResource( 109 ), SubResource( 110 ), SubResource( 111 ) ],
"loop": false,
"name": "default",
"speed": 32.0
} ]

[sub_resource type="AtlasTexture" id=113]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 0, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=114]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 512, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=115]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 1024, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=116]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 1536, 0, 512, 512 )

[sub_resource type="AtlasTexture" id=117]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 0, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=118]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 512, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=119]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 1024, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=120]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 1536, 512, 512, 512 )

[sub_resource type="AtlasTexture" id=121]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 0, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=122]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 512, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=123]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 1024, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=124]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 1536, 1024, 512, 512 )

[sub_resource type="AtlasTexture" id=125]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 0, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=126]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 512, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=127]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 1024, 1536, 512, 512 )

[sub_resource type="AtlasTexture" id=128]
flags = 4
atlas = ExtResource( 32 )
region = Rect2( 1536, 1536, 512, 512 )

[sub_resource type="SpriteFrames" id=129]
animations = [ {
"frames": [ SubResource( 113 ), SubResource( 114 ), SubResource( 115 ), SubResource( 116 ), SubResource( 117 ), SubResource( 118 ), SubResource( 119 ), SubResource( 120 ), SubResource( 121 ), SubResource( 122 ), SubResource( 123 ), SubResource( 124 ), SubResource( 125 ), SubResource( 126 ), SubResource( 127 ), SubResource( 128 ) ],
"loop": false,
"name": "default",
"speed": 32.0
} ]

[node name="Ninja" type="Node2D"]
scale = Vector2( 0.5, 0.5 )
script = ExtResource( 31 )

[node name="health" type="ProgressBar" parent="."]
margin_left = -128.0
margin_top = -338.0
margin_right = 128.0
margin_bottom = -304.0
custom_styles/fg = SubResource( 3 )
custom_styles/bg = SubResource( 4 )
max_value = 5.0
step = 1.0
value = 5.0
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="idle" type="AnimatedSprite" parent="."]
frames = SubResource( 1 )
frame = 8
playing = true

[node name="attack" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 2 )

[node name="die" type="AnimatedSprite" parent="."]
visible = false
frames = SubResource( 130 )

[node name="Tween" type="Tween" parent="."]

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, -16 )
shape = SubResource( 131 )

[node name="slashes" type="Node2D" parent="."]
scale = Vector2( 2, 2 )

[node name="AnimatedSprite1" type="AnimatedSprite" parent="slashes"]
visible = false
frames = SubResource( 95 )

[node name="AnimatedSprite2" type="AnimatedSprite" parent="slashes"]
visible = false
frames = SubResource( 112 )

[node name="AnimatedSprite3" type="AnimatedSprite" parent="slashes"]
visible = false
frames = SubResource( 129 )

[connection signal="animation_finished" from="attack" to="." method="_on_attack_animation_finished"]
[connection signal="frame_changed" from="attack" to="." method="_on_attack_frame_changed"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="animation_finished" from="slashes/AnimatedSprite1" to="." method="_on_slash_animation_finished"]
[connection signal="animation_finished" from="slashes/AnimatedSprite2" to="." method="_on_slash_animation_finished"]
[connection signal="animation_finished" from="slashes/AnimatedSprite3" to="." method="_on_slash_animation_finished"]
